<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".NewZpControlConsentimientosSalidaActivity" >

    <TextView
        android:id="@+id/label_header"
        style="?android:textAppearanceLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:drawableLeft="@drawable/ic_us"
        android:drawableStart="@drawable/ic_us"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:text="@string/us_1"
        android:textStyle="bold" />
	<LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingTop="10dip"
        android:paddingBottom="@dimen/activity_vertical_margin" >      
		<TextView
	        android:id="@+id/label_lugar"
	        style="?android:textAppearanceLarge"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:paddingTop="10dip"
	        android:paddingBottom="@dimen/activity_vertical_margin"
	        android:text="@string/lugar"
	        android:textStyle="bold" />
		
	    <Spinner
	        android:id="@+id/lugar"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:paddingTop="10dip"
	        android:paddingBottom="@dimen/activity_vertical_margin"
	        android:singleLine="true"
	        android:textSize="18sp"
	        android:textStyle="bold" />
    </LinearLayout>
	<LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingTop="10dip"
        android:paddingBottom="@dimen/activity_vertical_margin" >      
		<TextView
	        android:id="@+id/label_metodo"
	        style="?android:textAppearanceLarge"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:paddingTop="10dip"
	        android:paddingBottom="@dimen/activity_vertical_margin"
	        android:text="@string/method"
	        android:textStyle="bold" />      
	    
	    <Spinner
	        android:id="@+id/metodo_busqueda"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:paddingTop="10dip"
	        android:paddingBottom="@dimen/activity_vertical_margin"
	        android:singleLine="true"
	        android:textSize="18sp"
	        android:textStyle="bold" />    
    </LinearLayout>
	<TextView
        android:id="@+id/label_codigo"
        style="?android:textAppearanceLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingTop="10dip"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:text="@string/desc_barcode"
        android:textStyle="bold" />    
    
	<LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingTop="10dip"
        android:paddingBottom="@dimen/activity_vertical_margin" >

        <EditText
            android:id="@+id/codigo"
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_weight="1.0"
            android:ellipsize="end"
            android:hint="@string/barcode_code"
            android:singleLine="true"
            android:textSize="18sp"
            android:textStyle="bold" />

        <ImageButton
            android:id="@+id/barcode_button"
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:contentDescription="@string/desc_barcode"
            android:src="@drawable/ic_btn_barcode" />
    </LinearLayout>  
	<LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingTop="10dip"
        android:paddingBottom="@dimen/activity_vertical_margin" >    
        <TextView
	        android:id="@+id/label_event"
	        style="?android:textAppearanceLarge"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:paddingTop="10dip"
	        android:paddingBottom="@dimen/activity_vertical_margin"
	        android:text="@string/evento"
	        android:textStyle="bold" />	  
		<RadioGroup
		    android:layout_width="fill_parent"
		    android:layout_height="wrap_content"
		    android:orientation="horizontal">
		    <RadioButton android:id="@+id/radio_ingreso"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:text="@string/SCREENING"
		        android:onClick="onRadioButtonClicked"/>
		    <RadioButton android:id="@+id/radio_tri2"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:text="@string/TRI2"
		        android:onClick="onRadioButtonClicked"/>
		    <RadioButton android:id="@+id/radio_tri3"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:text="@string/TRI3"
		        android:onClick="onRadioButtonClicked"/>
		    <RadioButton android:id="@+id/radio_sinprog"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:text="@string/UNSCHED"
		        android:onClick="onRadioButtonClicked"/>	    
		</RadioGroup>
	</LinearLayout>
	<LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingTop="10dip"
        android:paddingBottom="@dimen/activity_vertical_margin" >      
		<TextView
	        android:id="@+id/label_persona"
	        style="?android:textAppearanceLarge"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:paddingTop="10dip"
	        android:paddingBottom="@dimen/activity_vertical_margin"
	        android:text="@string/persona"
	        android:textStyle="bold" />	    
	    
	    <Spinner
	        android:id="@+id/persona"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:paddingTop="10dip"
	        android:paddingBottom="@dimen/activity_vertical_margin"
	        android:singleLine="true"
	        android:textSize="18sp"
	        android:textStyle="bold" />
	</LinearLayout>
    
    <TextView android:layout_height="0dip" 
          android:layout_width="fill_parent"
          android:layout_weight="1" />

	<LinearLayout android:id="@+id/footer" android:layout_width="fill_parent"
    android:layout_height="wrap_content" android:orientation="horizontal"
    style="@android:style/ButtonBar">

	    <Button android:id="@+id/saveButton" android:layout_width="wrap_content"
	        android:layout_height="wrap_content" android:layout_weight="1"
	        android:text="@string/save" android:drawableLeft="@drawable/ic_ok"
        	android:drawableStart="@drawable/ic_ok" style="?android:attr/button"/>
	
	    <Button android:id="@+id/cancelButton" android:layout_width="wrap_content"
	        android:layout_height="wrap_content" android:layout_weight="1"
	        android:text="@string/finish" android:drawableLeft="@drawable/ic_error"
        	android:drawableStart="@drawable/ic_error" style="?android:attr/button"/>
	</LinearLayout>    
    
</LinearLayout>