<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
 >


    <TextView
        android:id="@+id/label_header"
        style="?android:textAppearanceLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:text="BUSCAR CITAS"
        android:textStyle="bold" />



    <LinearLayout
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:orientation="horizontal">
        <EditText
            android:id="@+id/parametro_edit_text"
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_weight="1.0"
            android:hint="fecha de busqueda"
            android:inputType="date"
            android:maxLines="1"/>

        <ImageButton
            android:id="@+id/find_button"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:contentDescription="@string/ok"
            android:src="@drawable/ic_btn_search" />
    </LinearLayout>

    <ListView
        android:id="@android:id/list"
        android:layout_width="fill_parent"
        android:layout_height="0dip"
        android:layout_weight="1.0"

        />
    <TextView android:layout_height="0dip"
        android:layout_width="fill_parent"
        android:layout_weight="0.09" />
    <Button
        android:id="@+id/add_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:contentDescription="@string/add"
        android:drawableLeft="@drawable/ic_new"/>

    <Button
        android:id="@+id/update_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/update_agenda"
        android:drawableLeft="@drawable/ic_refresh"/>

</LinearLayout>